static/admin/css/style.css
/* ... */
.btn-success:hover,
.btn-success:focus {
  background-color: #1186e3;
  background-position: 0 -15px;
}

.btn-success:active,
.btn-success.active {
  background-color: #1186e3;
  border-color: #2196f3;
}

.btn-success.disabled,
.btn-success[disabled],
fieldset[disabled] .btn-success,
.btn-success.disabled:hover,
.btn-success[disabled]:hover,
fieldset[disabled] .btn-success:hover,
.btn-success.disabled:focus,
.btn-success[disabled]:focus,
fieldset[disabled] .btn-success:focus,
.btn-success.disabled.focus,
.btn-success[disabled].focus,
fieldset[disabled] .btn-success.focus,
.btn-success.disabled:active,
.btn-success[disabled]:active,
fieldset[disabled] .btn-success:active,
.btn-success.disabled.active,
.btn-success[disabled].active,
fieldset[disabled] .btn-success.active {
  background-color: #1186e3;
  background-image: none;
}

/* TABLES */
table.spaced tr th,
table.spaced tr td {
  padding: 5px;
}

td.table-label {
  font-weight: bold;
  padding-top: 2px;
  padding-bottom: 2px;
  vertical-align: top;
}

td.table-value {
  padding-left: 15px;
  padding-top: 2px;
  padding-bottom: 2px;
  vertical-align: top;
}

/* BOXES */
.two-columns-left {
  vertical-align: top;
  display: inline-block;
  padding: 0;
  background-color: transparent;
  width: 49%;
  min-width: 49%;
  margin-left: 0;
  margin-right: 0.7%;
}

.two-columns-right {
  vertical-align: top;
  display: inline-block;
  padding: 0;
  background-color: transparent;
  width: 49%;
  min-width: 49%;
  margin-left: 0.7%;
  margin-right: 0;
}

.two-columns-left .box,
.two-columns-right .box {
  margin-bottom: 15px;
}

.box {
  display: inline-block;
  padding: 10px 10px 10px 10px;
  background-color: rgba(255, 255, 255, 0.1);
}

.box-header {
  width: 100%;
  font-size: 12px;
  font-weight: bold;
}

.box-body {
  width: 100%;
}

.box-context {
  width: 100%;
  font-size: 12px;
  font-style: italic;
  margin: 0 10px 10px 0;
}

.box-main {
  margin: 20px 0;
}

#box-msg {
  text-align: center;
  position: fixed;
  bottom: 0;
  right: 0;
  left: 0;
  z-index: 100;
}

/* MESSAGE BOX */
.msg, .msg-error, .msg-info {
  color: #505050;
  font-weight: bold;
  padding: 0;
}

.msg {
  background: #81b6e2;
}

.msg-error {
	background: #ca7c7c;
}

.msg-info {
	background: #8caf8c;
}

/* PAGES - COMMONS */
body.dmt {
  min-height: 100vh;
  background-image: url("../icons/dojo.png");
  background-repeat: no-repeat;
  background-position: center;
}

#body {
	padding: 0;
  color: #efefef;
}

#body,
#form {
	padding-top: 20px;
}

#body #main > div {
  min-height: 80vh;
  background-color: #1a1d1f;
}

#body #main .title {
  margin: 0;
  background-color: rgba(255, 255, 255, 0.1);
}

#body #main h1 {
  font-size: 24px;
  margin: 0 0 20px 0;
  padding: 0;
}

h3 {
  margin-bottom: 20px;
  margin-top: 0;
}

span {
	display: block;
	margin-left: auto;
  margin-right: auto;
}

button {
  display: inline-block;
  margin-left: 8px;
  margin-right: 8px;
}

.btn-group button {
    margin-left: 0;
    margin-right: 0;
}

.box-content {
  color: #e0e0e3;
  background-color: rgba(255, 255, 255, 0.1);
  text-align: left;
  padding: 30px;
}

.box-actions {
	margin-top: 10px;
  text-align: center;
}

.amount-sent {
  color: #f77c7c;
}

.amount-received {
  color: #76d776;
}

/* NAVIGATION MENU*/
#body #menu {
  padding-left: 0;
  padding-right: 0;
}

#body #menu .title {
  margin: 0;
  background-color: rgba(255, 255, 255, 0.1);
}

#body #menu .title h1 {
  font-size: 16px;
  margin: 0 0 5px 0;
  padding: 5px;
}

.nav-pills {
  color: #e0e0e3;
  overflow: hidden;
}

.nav-pills > li {
  padding-left: 0;
  padding-right: 0;
  border: none;
}

.nav-pills > li > a {
  color: #cfd8dc;
  border: none;
  margin-left: 5px;
  text-decoration: none;
  cursor: pointer;
  padding: 6px 4px;
}

.nav-pills > li > a:hover {
  color: #fff;
  background-color: transparent!important;
}

.nav-pills > li.active > a,
.nav-pills > li.active > a:hover {
  color: #fff;
  outline: none;
  background-color: transparent!important;
  font-weight: 600;
  text-decoration: none;
  cursor: default;
}

/* HEADER */
#header {
	height: 60px;
  display: flex;
  display: -ms-flexbox;
  align-items: center;
  -ms-flex-align: center;
}

#header div {
  padding-left: 0;
  padding-right: 0;
}

#header span {
  display:inline;
}

#header .title {
  color: #e0e0e3;
  margin-left: 0!important;
}

#header .login-box {
	text-align: right;
}

#header .login-box a {
  color: #e0e0e3;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
}

/* PAGES - HOME */
#login-page {
  padding: 100px 0;
}

#login-page #welcome-msg {
  text-align: center;
  margin-bottom: 60px;
  padding-bottom: 10px;
}

#login-page #welcome-msg h1 {
  color: #e0e0e3;
}

#login-page #signin .btn {
	margin-top: 10px;
}

#login-page input {
	width: 100%;
}

#login-page span {
  display:inline;
}

#login-page .qr-logo {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 50px;
  height: 50px;
  padding: 10px;
  border-radius: 4px;
  transform: translate(-50%, -50%);
  background-color: #313436;
  background-image: url('../icons/dojo.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

#login-page .signin-box {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem;
}

#login-page .signin {
  padding: 2rem;
  padding-right: 0;
}

#login-page .signin.with-auth47 {
  padding-right: 2rem;
  border-right: 1px solid #ccc;
}

#login-page .auth47-box {
  position: relative;
}

#login-page .auth47-box.active {
  padding: 2rem;
}
/* ... */

